# cfn-kafka-admin

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  docker-compose.yaml  functions.yaml  pyproject.toml
.cicd/: buildspec_layer.yml  codebuild_release.yml
.github/: ISSUE_TEMPLATE.md
.install/: layer-macro-sar.yaml
cfn_kafka_admin/: __init__.py  cfn_kafka_admin.py  cli.py  common.py
cfn_kafka_admin/cfn_resources_definitions/: __init__.py  custom.py  resource.py
cfn_kafka_admin/kafka/: acls_management.py  topics_management.py
cfn_kafka_admin/kafka_resources/: __init__.py  acls.py  topics_management.py
cfn_kafka_admin/kafka_resources/topics/: __init__.py  create.py  delete.py  update.py
cfn_kafka_admin/lambda_functions/: __init__.py  acls.py  schemas.py  topics.py  utils.py
cfn_kafka_admin/models/: __init__.py  admin.py
cfn_kafka_admin/specs/: __init__.py  aws-cfn-kafka-admin-provider-schema.json  ews-kafka-acl.json  ews-kafka-parameters.json  ews-kafka-schema.json  ews-kafka-topic.json
docs/: Makefile  conf.py  functions_install.rst  index.rst  installation.rst  make.bat  rtd-requirements.txt  usage.rst
tests/: __init__.py  _common.py  conftest.py  test_acls_admin.py  test_topics_admin.py
